# CAVeware

./: .gitignore  .gitmodules  CAVeTalk.cmake  CMakeLists.txt  CMakePresets.json  CavemanController.ioc  CavemanController_STM32F407ZGTx.ioc  CavemanController_nucleo64.ioc  CavemanController_nucleo64.script  Makefile  README.md  collect.cmake  toolchain.cmake
.github/actions/setup/: action.yml
.github/workflows/: cd.yml  ci.yml
boards/: CMakeLists.txt
boards/CAVeBoard/: CMakeLists.txt  suppressions.xml
boards/CAVeBoard-Mini/: CMakeLists.txt  suppressions.xml
boards/CAVeBoard-Mini/bsp_user/inc/: bsp_adc_user.h  bsp_encoder_user.h  bsp_gpio_user.h  bsp_pwm_user.h  bsp_spi_user.h  bsp_timer_user.h  bsp_uart_user.h
boards/CAVeBoard-Mini/bsp_user/src/: bsp_adc_user.c  bsp_encoder_user.c  bsp_gpio_user.c  bsp_logger_user.c  bsp_pwm_user.c  bsp_spi_user.c  bsp_timer_user.c  bsp_uart_user.c  bsp_user.c
boards/CAVeBoard-Mini/cavebot_user/inc/: cavebot_user.h
boards/CAVeBoard-Mini/cavebot_user/src/: cavebot_user.c
boards/CAVeBoard/bsp_user/inc/: bsp_adc_user.h  bsp_gpio_user.h  bsp_logger_user.h  bsp_spi_user.h  bsp_uart_user.h  bsp_user.h
boards/CAVeBoard/bsp_user/src/: bsp_adc_user.c  bsp_encoder_user.c  bsp_gpio_user.c  bsp_spi_user.c  bsp_uart_user.c  bsp_user.c
boards/CAVeBoard/cavebot_user/inc/: cavebot_user.h
boards/CAVeBoard/cavebot_user/src/: cavebot_user.c
boards/CAVeBoard/rover_config/src/: rover_4ws_config.c  rover_imu_config.c
boards/Nucleo-64/bsp_user/inc/: bsp_encoder_user.h
boards/Nucleo-64/bsp_user/src/: bsp_encoder_user.c  bsp_pwm_user.c  bsp_tick_user.c  bsp_uart_user.c  bsp_user.c
boards/Nucleo-64/rover_config/inc/: rover_4ws_config.h
boards/STM32-E407/bsp_user/inc/: bsp_pwm_user.h  bsp_tick_user.h
boards/STM32-E407/bsp_user/src/: bsp_adc_user.c  bsp_encoder_user.c  bsp_pwm_user.c  bsp_user.c
boards/STM32-E407/rover_config/src/: rover_4ws_config.c
bots/: CMakeLists.txt
bots/inc/: rover_4wd.h  rover_4ws.h
bots/src/: rover_4wd.c  rover_4ws.c
bsp/: CMakeLists.txt
bsp/boards/: CMakeLists.txt
bsp/boards/CAVeBoard/bsp_user/inc/: bsp_gpio_user.h  bsp_pwm_user.h
bsp/boards/CAVeBoard/bsp_user/src/: bsp_encoder_user.c  bsp_gpio_user.c  bsp_pwm_user.c  bsp_tick_user.c  bsp_uart_user.c  bsp_user.c
bsp/boards/CAVeBoard/rover_config/inc/: rover_4ws_config.h  rover_imu_config.h
bsp/boards/CAVeBoard/rover_config/src/: rover_4ws_config.c  rover_camera_config.c  rover_imu_config.c
bsp/boards/Nucleo-64/bsp_user/inc/: bsp_uart_user.h
bsp/boards/Nucleo-64/bsp_user/src/: bsp_uart_user.c
bsp/boards/Nucleo-64/rover_config/inc/: rover_4ws_config.h
bsp/boards/STM32-E407/bsp_user/inc/: bsp_adc_user.h  bsp_encoder_user.h  bsp_gpio_user.h  bsp_pwm_user.h  bsp_uart_user.h
bsp/boards/STM32-E407/bsp_user/src/: bsp_encoder_user.c  bsp_gpio_user.c  bsp_pwm_user.c  bsp_uart_user.c  bsp_user.c
bsp/boards/STM32-E407/rover_config/inc/: rover_4ws_config.h  rover_camera_config.h
bsp/boards/STM32-E407/rover_config/src/: rover_4ws_config.c  rover_camera_config.c  rover_imu_config.c
bsp/inc/: bsp.h  bsp_adc.h  bsp_encoder.h  bsp_encoder_user.h  bsp_gpio.h  bsp_logger.h  bsp_logger_user.h  bsp_motor.h  bsp_pwm.h  bsp_pwm_user.h  bsp_servo.h  bsp_spi.h  bsp_tick.h  bsp_timer.h  bsp_types.h  bsp_uart.h  bsp_uart_user.h
bsp/src/: bsp.c  bsp_adc.c  bsp_encoder.c  bsp_encoder_user.c  bsp_gpio.c  bsp_logger.c  bsp_logger_user.c  bsp_motor.c  bsp_pwm.c  bsp_pwm_user.c  bsp_servo.c  bsp_spi.c  bsp_tick.c  bsp_timer.c  bsp_uart.c  bsp_uart_user.c
cavebot/inc/: cavebot.h  cavebot_buttons.h  cavebot_cavetalk.h  cavebot_dust_sensor.h  cavebot_gas_sensor.h  cavebot_motion_profile.h  cavebot_pid.h  cavebot_version.h.in
cavebot/src/: cavebot.c  cavebot_buttons.c  cavebot_cavetalk.c  cavebot_dust_sensor.c  cavebot_gas_sensor.c  cavebot_motion_profile.c  cavebot_pid.c
caveman_controller/inc/: caveman_buttons.h  caveman_cavetalk.h  caveman_controller.h  caveman_dust_sensor.h  caveman_gas_sensor.h
caveman_controller/src/: caveman_buttons.c  caveman_cavetalk.c  caveman_controller.c  caveman_dust_sensor.c  caveman_gas_sensor.c
devices/: CMakeLists.txt
devices/inc/: accelerometer.h  gyroscope.h
devices/lsm6dsv16x/: CMakeLists.txt
devices/lsm6dsv16x/inc/: lsm6dsv16x.h
devices/lsm6dsv16x/src/: accelerometer_user.c  gyroscope_user.c  lsm6dsv16x.c
devices/src/: accelerometer.c  gyroscope.c
docs/: CAVeBoard-Mini_MCU_Pinout.md  CAVeBoard_MCU_Pinout.md  caveboard-2_mcu_pinout.md  caveboard_mcu_pinout.md  cppcheck.md  mcu_pinout.md  uncrustify.md
drivers/: CMakeLists.txt
drivers/a4988/: CMakeLists.txt
drivers/a4988/inc/: a4988.h
drivers/a4988/src/: a4988.c
drivers/lsm6dsv16x/: CMakeLists.txt
drivers/lsm6dsv16x/inc/: lsm6dsv16x.h
drivers/lsm6dsv16x/src/: lsm6dsv16x.c
drivers/rgbw/: CMakeLists.txt
drivers/rgbw/inc/: rgbw.h
drivers/rgbw/src/: rgbw.c
rover/inc/: rover.h  rover_4ws.h  rover_4ws_config.h  rover_camera.h  rover_camera_config.h  rover_imu.h  rover_pid.h
rover/src/: rover.c  rover_4ws.c  rover_4ws_config.c  rover_camera.c  rover_camera_config.c  rover_imu.c  rover_pid.c
sensors/: CMakeLists.txt
sensors/inc/: accelerometer.h  gyroscope.h
sensors/src/: accelerometer.c  accelerometer_user.c  gyroscope.c  gyroscope_user.c
tools/cppcheck/: cppcheck.cmake  suppressions.xml
tools/docker/: Dockerfile  compose.yml
tools/docker/arm-build/: Dockerfile
tools/docker/stm32cubemx/: CavemanController_STM32F407ZGTx.script  CavemanController_STM32F407ZGTx_ci.script  CavemanController_nucleo64.script  Dockerfile  compose.yml
tools/hooks/: pre-commit
tools/uncrustify/: uncrustify.cfg  uncrustify.cmake
